<resources>
    <string name="app_name">Mobile-app</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="author">Author</string>
    <string name="testbookpage">TestBookPage</string>
    <string name="title_of_book">Title of Book</string>
    <string name="book_author">Book Authors</string>
    <string name="isbn_number">ISBN Number</string>
    <string name="fire_storage_link">Fire Storage link</string>
    <string name="register_book">Register Book</string>
    <string name="book_category">Book Category</string>
    <string name="book_edition">Book Edition</string>
    <string name="publisher">Publisher</string>
    <string name="publication_year">Publication Year</string>
    <string name="student_id">Student ID</string>
    <string name="bookreg">BookReg</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="edition">Edition</string>
    <string name="category">Category</string>
    <string name="title_activity_book_register">BookRegister</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="floor_map">FLoor Map</string>
    <string name="welcome">Welcome\n In Library</string>
    <string name="choose_category">Choose category</string>
    <string name="all">All</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="network_design">Network Design</string>
    <string name="programming">Programming</string>
    <string name="web_design">Web Design</string>
    <string name="picture">Picture</string>
    <string name="book_price">Book Price</string>
    <string name="picrure_to_send">Picrure to send</string>
    <string name="activities">Activities</string>
    <string name="title_activity_topiccard">topiccard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_library">Welcome to Library</string>
    <string name="books_for_sell">Books For Sell</string>
    <string name="nwelcome_in_our_library_we_have_many_books_in_many_categories_you_can_choose_category_to_check_what_we_offer_n_n_if_you_have_some_books_what_you_don_t_need_you_can_sell_it_through_our_library_please_look_no_book_for_sell">\nWelcome in Our Library We have many books in many categories. You can choose category to check what we offer.\n\n If you have some books what you don\'t need, you can sell it through our library. Please look no Book for sell</string>
    <string name="timetable">Timetable</string>

</resources>