<?xml version="1.0" encoding="utf-8"?>
<!-- USED BY GREG DO NOT CHANGE -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/all"
        android:title="@string/all" />

    <item
        android:id="@+id/cloud"
        android:title="@string/cloud_computing" />

    <item
        android:id="@+id/dbase"
        android:title="Databases" />

    <item
        android:id="@+id/graphics"
        android:title="@string/computer_graphics" />

    <item
        android:id="@+id/network"
        android:title="@string/network_design" />

    <item
        android:id="@+id/programming"
        android:title="@string/programming" />

    <item
        android:id="@+id/web"
        android:title="@string/web_design" />
</menu>