<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ActivitiesDetails"
    android:id="@+id/drawer_layout">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingClass">

        <include
            layout="@layout/nav_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activities"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/iv_activities_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picrure_to_send"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_activities_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/tv_activities_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">


        <include
            layout="@layout/drawer_menu"
            android:layout_width="297dp"
            android:layout_height="match_parent" />
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>