<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellPage">

    <!-- <Button
         android:id="@+id/btn_bookp_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="61dp"
         android:text="@string/left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bookp_image" />

     <Button
         android:id="@+id/btn_bookp_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
         android:layout_marginLeft="148dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="61dp"
         android:text="@string/right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_bookp_left"
         app:layout_constraintTop_toBottomOf="@+id/iv_bookp_image" />-->

    <TextView
        android:id="@+id/tv_booksellp_author2"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_author"
        app:layout_constraintTop_toBottomOf="@+id/iv_booksellp_image" />

    <TextView
        android:id="@+id/tv_booksellp_publisher2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_publisher"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_isbn2" />

    <TextView
        android:id="@+id/tv_booksellp_edition2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_booksell_edition"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_publisher2" />

    <TextView
        android:id="@+id/tv_booksellp_publicyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/publication_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_publisher2"
        tools:layout_editor_absoluteX="17dp" />

    <TextView
        android:id="@+id/tv_booksellp_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/publisher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_isbn" />

    <TextView
        android:id="@+id/tv_bookselpl_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="38dp"
        android:text="@string/book_price"
        app:layout_constraintStart_toEndOf="@+id/iv_booksellp_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_booksellp_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_title2" />

    <TextView
        android:id="@+id/tv_booksellp_price2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bookselpl_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_booksellp_publicyear2"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_publisher2" />

    <TextView
        android:id="@+id/tv_booksell_edition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/edition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_publicyear2"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_publisher2" />

    <TextView
        android:id="@+id/tv_booksellp_title2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_author2" />

    <TextView
        android:id="@+id/tv_booksellp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_author" />

    <TextView
        android:id="@+id/tv_booksellp_isbn2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_isbn"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_category2" />

    <TextView
        android:id="@+id/tv_booksellp_category2"
        android:layout_width="292dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_booksellp_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_title2" />

    <TextView
        android:id="@+id/tv_booksellp_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_booksellp_image" />

    <TextView
        android:id="@+id/tv_booksellp_isbn"
        android:layout_width="39dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/isbn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booksellp_category" />

    <ImageView
        android:id="@+id/iv_booksellp_image"
        android:layout_width="180dp"
        android:layout_height="231dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>