<?xml version="1.0" encoding="utf-8"?>
<!-- USED BY GREG DO NOT CHANGE -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bc_view"
    android:layout_width="match_parent"
    app:cardCornerRadius="50sp"
    android:layout_height="180sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_bookcard_pricel"
        android:layout_width="match_parent"
        android:layout_height="180sp">

        <ImageView
            android:id="@+id/iv_bookcard_bookpic"
            android:layout_width="138dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_bookcard_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_bookcard_bookpic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bookcard_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_bookcard_bookpic"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookcard_title" />

        <TextView
            android:id="@+id/tv_bookprice_lab"
            android:layout_width="50sp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="44dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_bookcard_bookpic"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookcard_category" />

        <TextView
            android:id="@+id/tv_bookcard_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_bookprice_lab"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookcard_category"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bookcard_category_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            app:layout_constraintStart_toEndOf="@+id/iv_bookcard_bookpic"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookcard_author" />

        <TextView
            android:id="@+id/tv_bookcard_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_bookcard_category_lab"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookcard_author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>